Actualizo estilos en index.css y agrego nueva sección en index.html

--- a/index.html
+++ b/index.html
@@ -52,6 +52,20 @@
   </div>
 </footer>
 
+<div id="cookie-banner" class="cookie-banner">
+  <p>
+    Utilizamos cookies para mejorar tu experiencia, analizar el tráfico y ofrecerte contenido personalizado.
+    Al continuar navegando, aceptás nuestra política de cookies.
+  </p>
+  <div class="cookie-buttons">
+    <button id="accept-cookies">Aceptar</button>
+    <button id="decline-cookies">Rechazar</button>
+  </div>
+</div>
+
+<script src="./cookies.js"></script>
+
 </body>
 <script src="./main.js"></script>
+<script src="//code.tidio.co/hjrryiauskkaxeephfqnpzgtfg1jr5ow.js" async></script>
 </html>
